k8s/clusters/lab/apps/pocket-id/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 1411
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pocket-id
    app.kubernetes.io/instance: pocket-id
